--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.9.1",
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@stream-io/video-react-sdk": "^1.18.1",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
     "lucide-react": "^0.510.0",
+    "mongodb": "^5.9.2",
     "next": "15.3.2",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
