--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,8 @@ PORT=5001
 
 CLIENT_ORIGIN=http://localhost:5001
 
+NEXT_PUBLIC_API_URL=http://localhost:5001/api
+
 NODE_ENV=development
 
 MONGODB_URL = mongodb+srv://babyburnie2903:NZ2Ua03TaFbsVQuS@cluster0.1i4zm3y.mongodb.net/streamify_db?retryWrites=true&w=majority&appName=Cluster0
