--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@stream-io/video-react-sdk": "^1.18.1",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.510.0",
     "mongodb": "^6.16.0",
     "next": "15.3.2",
@@ -21,7 +22,8 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "stream-chat": "^9.3.0",
-    "stream-chat-react": "^13.0.5"
+    "stream-chat-react": "^13.0.5",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
