setting up backend for final project

--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,8 @@ CLIENT_ORIGIN=http://localhost:5001
 
 NEXT_PUBLIC_API_URL=http://localhost:5001/api
 
+FRONT_END_URL=http://localhost:3000
+
 NODE_ENV=development
 
 MONGODB_URL = mongodb+srv://babyburnie2903:NZ2Ua03TaFbsVQuS@cluster0.1i4zm3y.mongodb.net/streamify_db?retryWrites=true&w=majority&appName=Cluster0
