applying validation-middleware

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "migrate": "ts-node scripts/migration/run-migration.ts",
-    "migrate:academic": "ts-node scripts/migration/01-academic-migration.ts", 
+    "migrate:academic": "ts-node scripts/migration/01-academic-migration.ts",
     "migrate:enrollment": "ts-node scripts/migration/02-enrollment-migration.ts",
     "migrate:dev": "NODE_ENV=development ts-node scripts/run-migration.ts",
     "migrate:prod": "NODE_ENV=production ts-node scripts/run-migration.ts",
@@ -19,15 +19,26 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.828.0",
     "@aws-sdk/lib-storage": "^3.828.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/joi": "^17.2.2",
+    "argon2": "^0.43.0",
+    "axios": "^1.10.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "redis": "^5.5.6",
     "stream-chat": "^9.0.1",
     "uuid": "^11.1.0"
   },
