--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "redis": "^5.5.6",
     "stream-chat": "^9.0.1",
     "uuid": "^11.1.0"
@@ -51,6 +52,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
     "@types/node": "^24.0.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
