--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "express-rate-limit": "^7.5.0",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "nodemailer": "^7.0.3"
   }
 }
