--- a/backend/.env
+++ b/backend/.env
@@ -42,3 +42,17 @@ SMTP_PASS=Ducanh150806.
 # Development email testing (Ethereal Email)
 ETHEREAL_USER=ethereal.user@ethereal.email
 ETHEREAL_PASS=ethereal.password
+
+# ===== RATE LIMITING =====
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# ===== LOGGING =====
+LOG_LEVEL=info 
+
+# ===== FILE UPLOAD =====
+MAX_FILE_SIZE=10485760
+UPLOAD_PATH=./uploads
+
+# ===== CORS CONFIGURATION =====
+CORS_ORIGIN=http://localhost:3000
