--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "setup": "node setup-env.js",
     "migrate": "ts-node scripts/migration/run-migration.ts",
     "migrate:academic": "ts-node scripts/migration/01-academic-migration.ts",
     "migrate:enrollment": "ts-node scripts/migration/02-enrollment-migration.ts",
@@ -48,6 +49,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
+    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
