Fix manitoba name in database

--- a/frontend/.env
+++ b/frontend/.env
@@ -11,8 +11,7 @@ GOOGLE_CLIENT_SECRET=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
 # Cho frontend check (client-side) - CHỈ CLIENT_ID thôi
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=488390539509-dcgsinvi5idmutb65ai1dod9vqde2fbi.apps.googleusercontent.com
 
-
-# Database
+# Database connection string
 MONGODB_URL=mongodb+srv://babyburnie2903:NZ2Ua03TaFbsVQuS@cluster0.1i4zm3y.mongodb.net/streamify_db?retryWrites=true&w=majority&appName=Cluster0
 
 #SMTP
