--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "express-rate-limit": "^7.5.0",
     "express-slow-down": "^2.1.0",
     "express-validator": "^7.2.1",
+    "fs": "^0.0.1-security",
     "fs-extra": "^11.3.0",
     "helmet": "^8.1.0",
     "ioredis": "^5.6.1",
@@ -44,6 +45,7 @@
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.3",
+    "path": "^0.12.7",
     "puppeteer": "^24.11.2",
     "redis": "^5.5.6",
     "uuid": "^11.1.0"
@@ -58,7 +60,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.13",
-    "@types/node": "^24.0.0",
+    "@types/node": "^24.0.15",
     "@types/nodemailer": "^6.4.17",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.10",
