--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.4",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "fs-extra": "^11.3.0",
     "geist": "^1.4.2",
