--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,183 @@
-node_modules
+# ===== DEPENDENCIES =====
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ===== ENVIRONMENT VARIABLES =====
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
+
+# ===== NEXT.JS =====
+.next/
+out/
+build/
+dist/
+
+# ===== TYPESCRIPT =====
+*.tsbuildinfo
+next-env.d.ts
+
+# ===== LOGS =====
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ===== RUNTIME DATA =====
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# ===== COVERAGE DIRECTORY =====
+coverage/
+*.lcov
+
+# ===== NYAN TEST RESULTS =====
+.nyc_output
+
+# ===== GRUNT INTERMEDIATE STORAGE =====
+.grunt
+
+# ===== BOWER DEPENDENCY DIRECTORY =====
+bower_components
+
+# ===== NODE-WAF CONFIGURATION =====
+.lock-wscript
+
+# ===== COMPILED BINARY ADDONS =====
+build/Release
+
+# ===== DEPENDENCY DIRECTORIES =====
+jspm_packages/
+
+# ===== SNOWPACK DEPENDENCY DIRECTORY =====
+web_modules/
+
+# ===== TYPE SCRIPT CACHE =====
+*.tsbuildinfo
+
+# ===== OPTIONAL NPM CACHE DIRECTORY =====
+.npm
+
+# ===== OPTIONAL ESLINT CACHE =====
+.eslintcache
+
+# ===== MICROBUNDLE CACHE =====
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# ===== OPTIONAL REPL HISTORY =====
+.node_repl_history
+
+# ===== OUTPUT OF 'NPM PACK' =====
+*.tgz
+
+# ===== YARN INTEGRITY FILE =====
+.yarn-integrity
+
+# ===== DOTENV ENVIRONMENT VARIABLES FILE =====
+.env
+.env.test
+
+# ===== PARCEL-BUNDLER CACHE =====
+.cache
+.parcel-cache
+
+# ===== NEXT.JS BUILD OUTPUT =====
+.next
+out
+
+# ===== NUXT.JS BUILD / GENERATE OUTPUT =====
+.nuxt
+dist
+
+# ===== GATSBY FILES =====
+.cache/
+public
+
+# ===== VUEPRESS BUILD OUTPUT =====
+.vuepress/dist
+
+# ===== SERVERLESS DIRECTORIES =====
+.serverless/
+
+# ===== FUSEBOX CACHE =====
+.fusebox/
+
+# ===== DYNAMODB LOCAL FILES =====
+.dynamodb/
+
+# ===== TERNJS PORT FILE =====
+.tern-port
+
+# ===== STORES VSCode VERSIONS USED FOR TESTING VSCode EXTENSIONS =====
+.vscode-test
+
+# ===== YARN V2 =====
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+# ===== IDE & EDITOR FILES =====
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# ===== OS GENERATED FILES =====
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# ===== TEMPORARY FILES =====
+*.tmp
+*.temp
+.tmp/
+.temp/
+
+# ===== UPLOADED FILES =====
+uploads/
+public/uploads/
+
+# ===== DATABASE FILES =====
+*.db
+*.sqlite
+*.sqlite3
+
+# ===== REDIS DUMP =====
+dump.rdb
+
+# ===== SSL CERTIFICATES =====
+*.pem
+*.key
+*.crt
+*.csr
+
+# ===== BACKUP FILES =====
+*.bak
+*.backup
+
+# ===== CUSTOM PROJECT FILES =====
+# Add any project-specific files here
+scripts/output/
+*.env.example
